@@ -430,10 +430,11 @@ case $target_os in
 		echo Checking for Solaris 10 / 11 specific configuration for usb drivers
 		AC_SEARCH_LIBS(nanosleep,rt)
 		LIBUSB_LIBS="-R/usr/sfw/lib $LIBUSB_LIBS"
-		dnl FIXME: notification disabled while waiting for a libusbugen fix
-		AC_DEFINE(USB_NOTIFICATION_DISABLED, 1,
-			[Define to 1 if libusb doesn't support timeout.])
-		USB_NOTIFICATION_DISABLED=1
+		dnl FIXME: Sun's libusb doesn't support timeout (so blocks notification)
+		dnl and need to call libusb close upon reconnexion
+		AC_DEFINE(SUN_LIBUSB, 1,
+			[Define to 1 for Sun version of the libusb.])
+		SUN_LIBUSB=1
 		;;
 esac
 
@@ -776,7 +777,7 @@ AC_SUBST(CGIPATH)
 AC_SUBST(HTMLPATH)
 AC_SUBST(RUN_AS_USER)
 AC_SUBST(LINUX_HIDDEV)
-AC_SUBST(USB_NOTIFICATION_DISABLED)
+AC_SUBST(SUN_LIBUSB)
 AC_SUBST(WORDS_BIGENDIAN)
 AC_SUBST(PKG_CFG_DIR)
 AC_SUBST(USE_PKG_CFG)
